Fix overflow on form and work

--- a/style.css
+++ b/style.css
@@ -342,6 +342,7 @@ h2 {
     margin-top: 20px;
 
     display: flex;
+    flex-wrap: wrap;
     gap: 5px;
 }
 
@@ -375,6 +376,7 @@ h2 {
 
 .contact-personal {
     display: flex;
+    flex-direction: row;
     align-items: center;
     gap: 15px;
 }
@@ -389,6 +391,12 @@ h2 {
     background-color: #444444;
     color: #F1F1F1;
     border: none;
+}
+
+@media only screen and (max-width: 340px) {
+    .about {
+        height: auto;
+    }
 }
 
 
@@ -419,6 +427,12 @@ h2 {
 
     .skills-wrapper {
         flex-direction: column;
+    }
+
+    .contact-personal {
+        flex-direction: column;
+        align-items: stretch;
+        gap: 10px;
     }
 }
 
